@@ -38,6 +38,10 @@
   * bug fix: return values of READ-SEQUENCE did not take :START into
     account on file streams, regressions since 1.0.12.22. (reported by
     Daniel Herring, patch by Paul Huong)
+  * bug fix: using SET or (SETF SYMBOL-VALUE) to change the value of a
+    method specializer used to confuse permuation vector optimization.
+  * bug fix: system inserted bogus implicit type declarations for local
+    special variables in DEFMETHOD bodies.
 
 changes in sbcl-1.0.23 relative to 1.0.22:
   * enhancement: when disassembling method functions, disassembly
